--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@azure/msal-browser": "^3.26.1",
     "@dotenvx/dotenvx": "^1.7.0",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
@@ -23,11 +24,13 @@
     "@mui/base": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-static-gzip": "^2.1.7",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -40,7 +43,7 @@
     "@types/react-dom": "latest",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.2.2",
-    "eslint": "^9.9.0",
+    "eslint": "^9.12.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
