--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-static-gzip": "^2.1.7",
