--- a/package.json
+++ b/package.json
@@ -35,20 +35,25 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@testing-library/react": "^16.0.1",
     "@tsconfig/node-lts": "^20.1.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
     "@types/material-ui": "latest",
     "@types/node": "^22.2.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/testing-library__react": "^10.2.0",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.2.2",
     "eslint": "^9.12.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
+    "ts-jest": "^29.2.5",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.1.0",
