--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
     "ts-jest": "^29.2.5",
     "tslib": "^2.6.3",
