--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.9",
+    "@babel/preset-env": "^7.25.9",
     "@eslint/js": "^9.9.0",
     "@testing-library/react": "^16.0.1",
     "@tsconfig/node-lts": "^20.1.3",
@@ -45,6 +47,7 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/testing-library__react": "^10.2.0",
+    "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.2.2",
     "eslint": "^9.12.0",
