--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@mui/material": "latest",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-static-gzip": "^2.1.7",
+    "morgan": "^1.10.0",
     "react": "latest",
     "react-dom": "latest",
     "uuid": "^10.0.0"
