--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@eslint/js": "^9.13.0",
     "@testing-library/react": "^16.0.1",
     "@tsconfig/node-lts": "^20.1.3",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/material-ui": "latest",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.2.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
