--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:clienttypes": "tsc -p src/tsconfig.client.json",
     "build:js": "webpack --config webpack.dev.js",
     "encrypt": "./node_modules/.bin/dotenvx encrypt -f clientserver/.env.local && ./node_modules/.bin/dotenvx encrypt -f clientserver/.env.production && ./node_modules/.bin/dotenvx encrypt -f .env",
-    "start": "npm run build && npm run encrypt && dotenvx run -f clientserver/.env.local -- node ./server/server.js"
+    "start": "npm run build && npm run encrypt && dotenvx run -f clientserver/.env.local -- node ./clientserver/index.js"
   },
   "author": "Dustin Morris",
   "license": "ISC",
@@ -51,17 +51,21 @@
     "@types/node": "^22.2.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/supertest": "^6.0.2",
     "@types/testing-library__react": "^10.2.0",
     "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.2.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
+    "filemanager-webpack-plugin": "^8.0.0",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-axios": "^4.7.3",
     "mini-css-extract-plugin": "^2.9.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
