--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dustinwmorris",
+  "name": "chatbotfrontend",
   "version": "1.0.0",
   "description": "Chatbot UI",
   "scripts": {
@@ -10,45 +10,49 @@
     "build:clienttypes": "tsc -p src/tsconfig.client.json",
     "build:js": "webpack --config webpack.dev.js",
     "encrypt": "./node_modules/.bin/dotenvx encrypt -f clientserver/.env.local && ./node_modules/.bin/dotenvx encrypt -f clientserver/.env.production && ./node_modules/.bin/dotenvx encrypt -f .env",
-    "start": "npm run build && npm run encrypt && dotenvx run -f clientserver/.env.local -- node ./clientserver/index.js"
+    "lstart": "npm run build && npm run encrypt && dotenvx run -f clientserver/.env.local -- nodemon --watch clientserver --exec npx tsx clientserver/index.ts",
+    "start": "npm run build && npm run encrypt && dotenvx run -f clientserver/.env.production -- node clientserver/index.js"
   },
   "author": "Dustin Morris",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@azure/msal-browser": "^3.26.1",
-    "@dotenvx/dotenvx": "^1.7.0",
+    "@azure/msal-browser": "^3.27.0",
+    "@dotenvx/dotenvx": "^1.24.0",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@fontsource/roboto": "latest",
+    "@jest/globals": "^29.7.0",
     "@mui/base": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
-    "compression": "^1.7.4",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "express-static-gzip": "^2.1.7",
+    "express": "^4.21.1",
+    "express-static-gzip": "^2.2.0",
     "morgan": "^1.10.0",
     "react": "latest",
+    "react-chatbotify": "^2.0.0-beta.24",
     "react-dom": "latest",
-    "uuid": "^10.0.0",
+    "react-scripts": "^5.0.1",
+    "uuid": "^11.0.3",
     "xss": "^1.0.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.9",
-    "@babel/preset-env": "^7.25.9",
-    "@eslint/js": "^9.13.0",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@eslint/js": "^9.15.0",
     "@testing-library/react": "^16.0.1",
-    "@tsconfig/node-lts": "^20.1.3",
+    "@tsconfig/node-lts": "^22.0.0",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.13",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/material-ui": "latest",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^22.2.0",
+    "@types/node": "^22.9.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/supertest": "^6.0.2",
@@ -56,21 +60,23 @@
     "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.2.2",
-    "eslint": "^9.13.0",
+    "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "filemanager-webpack-plugin": "^8.0.0",
-    "globals": "^15.11.0",
-    "html-webpack-plugin": "^5.6.0",
+    "globals": "^15.12.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-mock-axios": "^4.7.3",
-    "mini-css-extract-plugin": "^2.9.0",
+    "jest-mock-axios": "^4.8.0",
+    "mini-css-extract-plugin": "^2.9.2",
+    "nodemon": "^3.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.11.0",
-    "webpack": "^5.93.0",
+    "tslib": "^2.8.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0",
+    "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   }
 }
