--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,7 +4,7 @@
     "_version": "22.0.0",
   
     "compilerOptions": {
-      "lib": ["es2023"],
+      "lib": ["ESNext"],
       "module": "node16",
       "target": "es2022",
   
