--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:clienttypes && npm run build:server && npm run build:js",
-    "build:server": "tsc -p ./clientserver/tsconfig.server.json",
+    "build:server": "tsc -p ./clientserver/tsconfig.server.json && npm run copy-js",
     "build:clienttypes": "tsc -p src/tsconfig.client.json",
     "build:js": "webpack --config webpack.dev.js",
+    "copy-js": "copyfiles -u 1 'clientserver/**/*.js' dist/server",
     "encrypt": "./node_modules/.bin/dotenvx encrypt -f clientserver/.env.local && ./node_modules/.bin/dotenvx encrypt -f clientserver/.env.production && ./node_modules/.bin/dotenvx encrypt -f .env",
     "lstart": "npm run build && npm run encrypt && dotenvx run -f clientserver/.env.local -- nodemon --watch clientserver --exec npx tsx clientserver/index.ts",
     "start": "npm run build && npm run encrypt && dotenvx run -f clientserver/.env.production -- node clientserver/index.js"
@@ -58,6 +59,7 @@
     "@types/supertest": "^6.0.2",
     "@types/testing-library__react": "^10.2.0",
     "babel-jest": "^29.7.0",
+    "copyfiles": "^2.4.1",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.2.2",
     "eslint": "^9.15.0",
