--- a/clientserver/tsconfig.server.json
+++ b/clientserver/tsconfig.server.json
@@ -16,7 +16,8 @@
         "rootDir": ".",
         "paths": {
             "@public/*": ["../public/*"],
-            "@assets/*": ["./assets/*"]
+            "@assets/*": ["./assets/*"],
+            "@certs/*": ["./build/*"],
         }
     },
     "include": ["**/*.ts"]
