updates to dockerfile for production

--- a/clientserver/tsconfig.server.json
+++ b/clientserver/tsconfig.server.json
@@ -5,9 +5,8 @@
         "sourceMap": true,
         "declarationMap": true,
         "declaration": true,
-        "emitDeclarationOnly": true,
-        "allowImportingTsExtensions": true,
         "noEmit": false,
+        "declarationDir": "../types",
         "lib": [
             "es2023"
         ],
