Multiple changes.  Too big really for a PR but doing it anyway.

--- a/clientserver/tsconfig.server.prod.json
+++ b/clientserver/tsconfig.server.prod.json
@@ -25,5 +25,5 @@
             "@certs/*": ["../build/*"]
         }
     },
-    "exclude": ["node_modules", "dist", "build", "public", "__tests__", "__mocks__"]
+    "exclude": ["node_modules", "dist", "build", "public"]
 }
