--- a/.yalc/chatbot-ai-lib/package.json
+++ b/.yalc/chatbot-ai-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatbot-ai-lib",
-  "version": "1.1.7a",
+  "version": "1.1.10",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
@@ -53,5 +53,5 @@
     }
   },
   "dependencies": {},
-  "yalcSig": "6534fc41dac9319f94062d901ddb65b4"
+  "yalcSig": "2dc7817d485f9cb82bf71c7165ca8cae"
 }
